# Systems-Architecture-2026

./: .clang-format  README.md  docker-build.sh  index.html  publish_video_feed.py  readme.md
.devcontainer/: Dockerfile  devcontainer.json  extensions.txt  postcreate.sh
Vision/: Readme.md
Web_controller/remote_control_interface/: package.xml
Web_controller/simple_listener/src/: publisher_lambda_function.cpp
core/src/custom_interfaces/: README.md  Readme.md  package.xml
core/src/custom_interfaces/msg/: Position.msg  Pwms.msg  State.msg
core/src/custom_interfaces/srv/: ControlMode.srv
onboard/src/cli/: package.xml  setup.cfg  setup.py
onboard/src/cli/cli/: cli_console.py  cli_publisher.py
onboard/src/cli/launch/: cli_launch.py
onboard/src/dvl/: CMakeLists.txt  package.xml
onboard/src/remote_control_via_webpage/: index.html
onboard/src/remote_control_via_webpage/joystick_listener/: CMakeLists.txt  package.xml
onboard/src/remote_control_via_webpage/joystick_listener/src/: joystick_logger.cpp  subscriber_lambda_function.cpp
onboard/src/soft_mux/: CMakeLists.txt  README.md  package.xml
onboard/src/soft_mux/include/: mux_quyen.hpp  mux_sherry.hpp  soft_mux.hpp
onboard/src/soft_mux/launch/: soft_mux_launch.py  soft_mux_launch.xml
onboard/src/soft_mux/src/: mux_quyen.cpp  mux_sherry.cpp  soft_mux.cpp
onboard/src/soft_mux/test/: test_soft_mux.cpp
onboard/src/thrust_interface/: CMakeLists.txt  package.xml
onboard/src/thrust_interface/include/: thrust_interface.hpp
onboard/src/thrust_interface/launch/: thrust_interface_launch.py  thrust_interface_launch.xml
onboard/src/thrust_interface/src/: thrust_interface.cpp
onboard/src/thrust_interface/test/: test_thrust_interface.cpp
onboard/src/wp_executive/: CMakeLists.txt
remote_control_interface/msg/: Gamepad.msg
remote_control_via_webpage/: index.html  readme.md
remote_control_via_webpage/joystick_listener/: package.xml
remote_control_via_webpage/remote_control_interface/: CMakeLists.txt
remote_control_via_webpage/simple_listener/src/: subscriber_lambda_function.cpp
ros2_listener/: ps5_listener.py
simple_listener/: CMakeLists.txt  package.xml
simple_listener/src/: publisher_lambda_function.cpp  subscriber_lambda_function.cpp
